added basic styles to shift to results mode

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Congress Search</title>
   </head>
   <body>
-    <div class="search-container">
-      <div class="search-box">
+    <div class="viewport-container">
+      <div class="search-container">
         <h1>Library of Congress Search Engine</h1>
         <input id="search-field" type="text" placeholder="What do you want to find?" />
         <select name="format" id="search-format">
@@ -23,6 +23,12 @@
         </select>
         <button id="search-button">SEARCH</button>
       </div>
+      <div id="search-results">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat suscipit natus in officia. Alias illo
+        perspiciatis molestias dolor commodi quas enim debitis rerum recusandae quos atque minus, eius doloremque
+        itaque?
+      </div>
     </div>
+    <script src="./assets/app.js"></script>
   </body>
 </html>
